syntax = "proto3";

package rivet.backend.pkg.cluster.datacenter_get;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
	repeated rivet.common.Uuid datacenter_ids = 1;
}

message Response {
	repeated rivet.backend.cluster.Datacenter datacenters = 1;
}
